--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ITTelekom"
+        android:theme="@style/Theme.ITTelekom.Starting"
         tools:targetApi="31">
         <activity
             android:name=".screens.LoginActivity"
             android:exported="true"
-            android:theme="@style/Theme.ITTelekom">
+            android:theme="@style/Theme.ITTelekom.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,7 +25,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".screens.DashboardActivity">
+            android:name=".screens.DashboardActivity"
+            android:theme="@style/Theme.ITTelekom"
+            >
         </activity>
     </application>
 
