--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,13 @@
 [versions]
 accompanistNavigationAnimationVersion = "<latest-version>"
+accompanistSwiperefresh = "0.30.1"
 accompanistSwiperefreshVersion = "<latest_version>"
 agp = "8.6.1"
+androidxMaterial3 = "1.3.0"
+androidxMaterial3Version = "1.4.0-alpha02"
+composeBomVersion = "2023.05.01"
 converterGson = "2.9.0"
+googleAccompanistSwiperefresh = "0.27.0"
 gson = "2.10.1"
 kotlin = "1.9.0"
 coreKtx = "1.10.1"
@@ -13,23 +18,36 @@ kotlinxCoroutinesAndroid = "1.7.3"
 lifecycleRuntimeKtx = "2.8.6"
 activityCompose = "1.9.3"
 composeBom = "2024.04.01"
+lifecycleViewmodelComposeVersion = "2.8.7"
 material3 = "1.3.1"
 material3Version = "<version>"
 materialIconsExtendedVersion = "<version>"
+materialVersion = "<latest_version>"
 navigationCompose = "2.8.3"
 retrofit = "2.9.0"
 securityCrypto = "1.1.0-alpha06"
+swiperefreshlayoutVersion = "1.1.0"
 ui = "1.7.5"
 securityCryptoKtx = "1.0.0"
+storageVersion = "1.5.0"
+material3JvmstubsVersion = "1.4.0-alpha03"
 
 [libraries]
 accompanist-swiperefresh = { module = "com.google.accompanist:accompanist-swiperefresh", version.ref = "accompanistSwiperefreshVersion" }
+accompanist-swiperefresh-v0301 = { module = "com.google.accompanist:accompanist-swiperefresh", version.ref = "accompanistSwiperefresh" }
+accompanists-accompanist-swiperefresh = { module = "com.google.accompanists:accompanist-swiperefresh", version.ref = "googleAccompanistSwiperefresh" }
+androidx-compose-bom-v20230501 = { module = "androidx.compose:compose-bom", version.ref = "composeBomVersion" }
 androidx-compose-material3-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelComposeVersion" }
+androidx-material = { module = "androidx.compose.material:material", version.ref = "materialVersion" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtendedVersion" }
+androidx-material3-v130 = { module = "androidx.compose.material3:material3", version.ref = "androidxMaterial3" }
+androidx-material3-v140alpha02 = { module = "androidx.compose.material3:material3", version.ref = "androidxMaterial3Version" }
 androidx-material3-vversion = { module = "androidx.compose.material3:material3", version.ref = "material3Version" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 androidx-security-crypto = { module = "androidx.security:security-crypto", version.ref = "securityCrypto" }
+androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version.ref = "swiperefreshlayoutVersion" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 google-accompanist-navigation-animation = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "accompanistNavigationAnimationVersion" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
@@ -47,10 +65,13 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
+lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose" }
 material3 = { module = "androidx.compose.material3:material3" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 ui = { module = "androidx.compose.ui:ui", version.ref = "ui" }
 androidx-security-crypto-ktx = { group = "androidx.security", name = "security-crypto-ktx", version.ref = "securityCryptoKtx" }
+androidx-storage = { group = "androidx.test.services", name = "storage", version.ref = "storageVersion" }
+androidx-material3-jvmstubs = { group = "androidx.compose.material3", name = "material3-jvmstubs", version.ref = "material3JvmstubsVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
