--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -28,6 +29,10 @@
             android:name=".screens.DashboardActivity"
             android:theme="@style/Theme.ITTelekom"
             >
+        </activity>
+        <activity
+            android:name=".screens.ChangeTariffActivity"
+            android:theme="@style/Theme.ITTelekom">
         </activity>
     </application>
 
