--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ITTelekom.Starting"
-        tools:targetApi="31">
+        android:enableOnBackInvokedCallback="true"
+        tools:targetApi="31"
+        tools:ignore="UnusedAttribute">
         <activity
             android:name=".layouts.LoginActivity"
             android:exported="true"
@@ -45,6 +47,10 @@
         </activity>
         <activity
             android:name=".layouts.settings.DisplayActivity"
+            android:theme="@style/Theme.ITTelekom">
+        </activity>
+        <activity
+            android:name=".layouts.profile.ProfileManagerActivity"
             android:theme="@style/Theme.ITTelekom">
         </activity>
     </application>
