--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,10 @@
             android:name=".layouts.profile.ProfileManagerActivity"
             android:theme="@style/Theme.ITTelekom">
         </activity>
+        <activity
+            android:name=".layouts.payment.PaymentFieldActivity"
+            android:theme="@style/Theme.ITTelekom">
+        </activity>
     </application>
 
 </manifest>
